<resources>
    <string name="app_name">Notepad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_notes">Notes</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="backup">Backup</string>
    <string name="trash">Trash</string>

    <string name="sort">Sort</string>
    <string name="title_activity_add">AddActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="save">Save</string>
    <string name="enter_title">Enter title ...</string>
    <string name="enter_text">Enter text</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select all</string>
    <string name="delete_all">Delete All</string>
    <string name="last_edit">last edit :</string>
    <string name="select_all_notes">Select all notes</string>
    <string name="import_text_files">Import text files</string>
    <string name="export_notes_to_text_files">Export notes to text files</string>
    <string name="categories">Categories</string>
    <string name="turn_off_ads">Turn off ads</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="share">Share</string>
    <string name="add">Add</string>
    <string name="undelete_all">Undelete All</string>
    <string name="empty_trash">Empty trash</string>
    <string name="new_category_name">New Category Name</string>
    <string name="categorize">Categorize</string>
    <string name="colorize">Colorize</string>
    <string name="switch_to_read_mode">Switch to read mode</string>
    <string name="print">Print</string>
    <string name="show_formatting_bar">Show formatting bar</string>
    <string name="show_information">Show information</string>
    <string name="redo">Redo</string>
    <string name="undo_all">Undo all</string>
    <string name="undo">Undo</string>
    <string name="remove_the_color">REMOVE THE COLOR</string>
    <string name="select_color">Select color</string>
    <string name="instruction">Tap (or click ) the note above to open it \n  \n
        User the + (plus) button below to create a new note</string>
    <string name="task_title_instruction">Hi, how are you? (tap to open)</string>
    <string name="task_content_instruction">Thank you for downloading Notepad Free. This is a welcome message.\n
        You can delete this message by clicking Delete button in the top right corner.\n
        You can revert any unwanted changes during note edition with the "Undo" and "Redo" buttons. Try to edit this text, and click the buttons in the top right corner.\n
        Please check the main menu for additional functions, like Help screen, backup functions, or settings. It can be opened with the button in the top left corner of the main screen.\n
        Have a nice day.\n
        ☺️
    </string>

</resources>