<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/notepad_section"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/note_ic"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/backup_ic"
            android:title="@string/backup" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/trash_ic"
            android:title="@string/trash" />
    </group>

    <group >
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting_ic"
            android:title="@string/settings" />
    </group>
</menu>