<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lutech.notepad.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.lutech.notepad.ui.category.CategoryFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_category"/>

    <fragment
        android:id="@+id/nav_trash"
        android:name="com.lutech.notepad.ui.trash.TrashFragment"
        android:label="@string/trash"
        tools:layout="@layout/fragment_trash" />
</navigation>